commit translated contents

--- a/lifecycle-data/products/microsoft-application-virtualization-50.yml
+++ b/lifecycle-data/products/microsoft-application-virtualization-50.yml
@@ -15,7 +15,7 @@ summary: >+
   Microsoft Application Virtualization 5.0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: voor Extern bureaublad-services, voor Terminal Services, voor Windows-desktops
+  Dit geldt voor de volgende edities: voor Extern bureaublad-services, voor Terminal Services, voor Windows Desktops
 
 products:
 - windows
