--- a/lifecycle-data/products/office-xp.yml
+++ b/lifecycle-data/products/office-xp.yml
@@ -37,4 +37,4 @@ releases:
 - version: Original Release
   startDate: 05/31/2001
   endDate: 12/31/2002
-content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Developer\n* Professional\n* Taalprogramma's\n* Standard\n* Web Components"
+content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Developer\n* Professional\n* Taalprogramma's\n* Standaard\n* Web Components"
