--- a/lifecycle-data/products/cloud-platform-system.yml
+++ b/lifecycle-data/products/cloud-platform-system.yml
@@ -15,7 +15,7 @@ summary: >+
   Cloud Platform System volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit is van toepassing op de volgende edities: Standard
+  Dit is van toepassing op de volgende edities: Standaard
 
 products:
 - azure
@@ -28,4 +28,4 @@ releases:
 - version: Original Release
   startDate: 01/29/2015
   endDate: 07/12/2022
-content: "\n\n> [!NOTE]\n> De ondersteuning voor Cloud Platform System wordt, zoals weergegeven, verlengd om alle klanten de standaard tijdlijn voor de overgang van de levenscyclus te bieden.\n> [!NOTE]\n> Cloud Platform System Standard is gestart op 18 september 2017.\n\n## <a name=\"editions\"></a>Edities \n* Standard"
+content: "\n\n> [!NOTE]\n> De ondersteuning voor Cloud Platform System wordt, zoals weergegeven, verlengd om alle klanten de standaard tijdlijn voor de overgang van de levenscyclus te bieden.\n> [!NOTE]\n> Cloud Platform System Standaard is gestart op 18 september 2017.\n\n## <a name=\"editions\"></a>Edities \n* Standaard"
