--- a/lifecycle-data/products/microsoft-application-virtualization-hosting-46.yml
+++ b/lifecycle-data/products/microsoft-application-virtualization-hosting-46.yml
@@ -1,6 +1,6 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Microsoft Application Virtualization Hosting 4.6 voor Windows-desktops
+  title: Microsoft Application Virtualization Hosting 4.6 voor Windows Desktops
   description: Microsoft Application Virtualization Hosting 4.6 voor Windows Desktops volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: for Windows Desktops
@@ -10,7 +10,7 @@ metadata:
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "935444"
-name: Microsoft Application Virtualization Hosting 4.6 voor Windows-desktops
+name: Microsoft Application Virtualization Hosting 4.6 voor Windows Desktops
 summary: >+
   Microsoft Application Virtualization Hosting 4.6 voor Windows Desktops volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
