--- a/lifecycle-data/products/microsoft-application-virtualization-hosting-51.yml
+++ b/lifecycle-data/products/microsoft-application-virtualization-hosting-51.yml
@@ -1,7 +1,7 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Microsoft Application Virtualization Hosting 5.1 voor Windows-desktops
-  description: Microsoft Application Virtualization Hosting 5.1 voor Windows-bureaubladen volgt het vaste levenscyclusbeleid.
+  title: Microsoft Application Virtualization Hosting 5.1 voor Windows Desktops
+  description: Microsoft Application Virtualization Hosting 5.1 voor Windows Desktops volgt het vaste levenscyclusbeleid.
   ms.date: 09/10/2020
   keywords: for Windows Desktops
   ms.openlocfilehash: 9296a136a0bc0da5a6d6b6b8b49d012170158da0
@@ -10,9 +10,9 @@ metadata:
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/10/2020
   ms.locfileid: "1000570"
-name: Microsoft Application Virtualization Hosting 5.1 voor Windows-desktops
+name: Microsoft Application Virtualization Hosting 5.1 voor Windows Desktops
 summary: >+
-  Microsoft Application Virtualization Hosting 5.1 voor Windows-bureaubladen volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
+  Microsoft Application Virtualization Hosting 5.1 voor Windows Desktops volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
   Dit geldt voor de volgende edities: voor Windows Desktops
