--- a/lifecycle-data/products/microsoft-biztalk-adapters-for-host-systems-20.yml
+++ b/lifecycle-data/products/microsoft-biztalk-adapters-for-host-systems-20.yml
@@ -1,7 +1,7 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Microsoft BizTalk-adapters voor host-systemen 2.0
-  description: Microsoft BizTalk-adapters voor host-systemen 2.0 volgen het vaste levenscyclusbeleid.
+  title: Microsoft BizTalk-adapters voor hostsystemen 2.0
+  description: Microsoft BizTalk-adapters voor hostsystemen 2.0 volgen het vaste levenscyclusbeleid.
   ms.date: 09/10/2020
   keywords: Developer,Standard
   ms.openlocfilehash: 233e1bef8d5f953df1498b57cfbfc077b3461f49
@@ -10,12 +10,12 @@ metadata:
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/10/2020
   ms.locfileid: "1000200"
-name: Microsoft BizTalk-adapters voor host-systemen 2.0
+name: Microsoft BizTalk-adapters voor hostsystemen 2.0
 summary: >+
-  Microsoft BizTalk-adapters voor host-systemen 2.0 volgen het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
+  Microsoft BizTalk-adapters voor hostsystemen 2.0 volgen het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: Developer, Standaard
+  Dit is van toepassing op de volgende edities: Developer, Standaard
 
 products:
 - microsoft-servers
@@ -28,4 +28,4 @@ releases:
 - version: Original Release
   startDate: 06/21/2009
   endDate: 07/09/2019
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](https://techcommunity.microsoft.com/t5/Host-Integration-Blog/End-of-Support-for-BizTalk-Adapters-for-Host-Systems-2-0/ba-p/269471)\n\n\n## <a name=\"editions\"></a>Edities \n* Developer\n* Standard"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](https://techcommunity.microsoft.com/t5/Host-Integration-Blog/End-of-Support-for-BizTalk-Adapters-for-Host-Systems-2-0/ba-p/269471)\n\n\n## <a name=\"editions\"></a>Edities \n* Developer\n* Standaard"
