--- a/lifecycle-data/products/microsoft-lync-server-2013.yml
+++ b/lifecycle-data/products/microsoft-lync-server-2013.yml
@@ -15,7 +15,7 @@ summary: >+
   Microsoft Lync Server 2013 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit is van toepassing op de volgende edities: Enterprise, Persistent Chat Software Development Kit, Phone, SDK, Standard
+  Dit is van toepassing op de volgende edities: Enterprise, Persistent Chat Software Development Kit, Phone, SDK, Standaard
 
 products:
 - office
@@ -28,4 +28,4 @@ releases:
 - version: Original Release
   startDate: 01/25/2011
   endDate: 04/11/2023
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Productgegevens](/lyncserver/microsoft-lync-server-2013)\n\n> [!NOTE]\n> Lync Phone-edtie wordt ondersteund met Lync Server 2010 en Lync Server 2013. De ondersteuningsdatum voor Lync Phone-editie is met twee jaar verlengd om af te stemmen op de levenscyclus van Lync Server 2013.\n\n## <a name=\"editions\"></a>Edities \n* Enterprise\n* Persistent Chat Software Development Kit\n* Phone\n* SDK\n* Standard"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Productgegevens](/lyncserver/microsoft-lync-server-2013)\n\n> [!NOTE]\n> Lync Phone-editie wordt ondersteund met Lync Server 2010 en Lync Server 2013. De ondersteuningsdatum voor Lync Phone-editie is met twee jaar verlengd om af te stemmen op de levenscyclus van Lync Server 2013.\n\n## <a name=\"editions\"></a>Edities \n* Enterprise\n* Persistent Chat Software Development Kit\n* Phone\n* SDK\n* Standaard"
