--- a/lifecycle-data/products/microsoft-system-center-essentials-2010.yml
+++ b/lifecycle-data/products/microsoft-system-center-essentials-2010.yml
@@ -15,7 +15,7 @@ summary: >+
   Microsoft System Center Essentials 2010 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: Allemaal van toepassing, wSQL
+  Dit geldt voor de volgende edities: Alle toepasselijke, wSQL
 
 products:
 - msc
@@ -28,4 +28,4 @@ releases:
 - version: Original Release
   startDate: 07/28/2010
   endDate: 10/13/2020
-content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Alles wat van toepassing is\n* wSQL"
+content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Alle toepasselijke\n* wSQL"
