--- a/lifecycle-data/products/microsoft-visual-studio-net-2003.yml
+++ b/lifecycle-data/products/microsoft-visual-studio-net-2003.yml
@@ -15,7 +15,7 @@ summary: >+
   Microsoft Visual Studio .NET 2003 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit is van toepassing op de volgende edities: Enterprise Architect, Enterprise Developer, J#, Professional, Standard
+  Dit is van toepassing op de volgende edities: Enterprise Architect, Enterprise Developer, J#, Professional, Standaard
 
 products:
 - vs
@@ -31,4 +31,4 @@ releases:
 - version: Original Release
   startDate: 07/10/2003
   endDate: 10/09/2007
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n\n## <a name=\"editions\"></a>Edities \n* Enterprise Architect\n* Enterprise Developer\n* J#\n* Professional\n* Standard"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n\n## <a name=\"editions\"></a>Edities \n* Enterprise Architect\n* Enterprise Developer\n* J#\n* Professional\n* Standaard"
