--- a/lifecycle-data/products/sql-server-2014.yml
+++ b/lifecycle-data/products/sql-server-2014.yml
@@ -15,7 +15,7 @@ summary: >+
   SQL Server 2014 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit is van toepassing op de volgende edities: Business Intelligence, Developer, Enterprise, Enterprise Core, Express, Standard, Web
+  Dit is van toepassing op de volgende edities: Business Intelligence, Developer, Enterprise, Enterprise Core, Express, Standaard, Web
 
 products:
 - sql-server
@@ -37,4 +37,4 @@ releases:
 - version: Original Release
   startDate: 06/05/2014
   endDate: 07/12/2016
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n\n## <a name=\"editions\"></a>Edities \n* Business Intelligence\n* Developer\n* Enterprise\n* Enterprise Core\n* Express\n* Standard\n* Web"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n\n## <a name=\"editions\"></a>Edities \n* Business Intelligence\n* Developer\n* Enterprise\n* Enterprise Core\n* Express\n* Standaard\n* Web"
