--- a/lifecycle-data/products/visual-studio-2015.yml
+++ b/lifecycle-data/products/visual-studio-2015.yml
@@ -12,7 +12,7 @@ metadata:
   ms.locfileid: "937405"
 name: Visual Studio 2015
 summary: >+
-  Visual Studio 2015 volgt het beleid voor de [vaste](/lifecycle/policies/fixed) levenscyclus.
+  Visual Studio 2015 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
   Dit is van toepassing op de volgende edities: Agents, Community, Enterprise, ESM, Express voor Web, Express voor Windows 10, Express voor Windows Desktop, Modeling SDK, Professional, PSM, Release Management, Werkbalk Extern, SDK, Shell (geïntegreerde modus), Shell (geïsoleerde modus), Test Professional, TPS, Visual C++ herdistribueerbaar
@@ -31,4 +31,4 @@ releases:
 - version: Original Release
   startDate: 07/20/2015
   endDate: 10/14/2025
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Onderhoudsinformatie](https://www.visualstudio.com/productinfo/vs-servicing-vs)\n\n\n## <a name=\"editions\"></a>Edities \n* Agents\n* Community\n* Enterprise\n*  ESM\n* Express voor Web\n* Express voor Windows 10\n* Express voor Windows Desktop\n* Modeling SDK\n* Professional\n* PSM\n* Releasebeheer\n* Werkbalk extern\n* SDK\n* Shell (geïntegreerde modus)\n* Shell (geïsoleerde modus)\n* Test Professional\n* TPS\n* Visual C++ herdistribueerbaar"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Onderhoudsinformatie](https://www.visualstudio.com/productinfo/vs-servicing-vs)\n\n\n## <a name=\"editions\"></a>Edities \n* Agents\n* Community\n* Enterprise\n* ESM\n* Express voor Web\n* Express voor Windows 10\n* Express voor Windows Desktop\n* Modeling SDK\n* Professional\n* PSM\n* Releasebeheer\n* Werkbalk extern\n* SDK\n* Shell (geïntegreerde modus)\n* Shell (geïsoleerde modus)\n* Test Professional\n* TPS\n* Visual C++ herdistribueerbaar"
