--- a/lifecycle-data/products/workflow-manager-10.yml
+++ b/lifecycle-data/products/workflow-manager-10.yml
@@ -15,7 +15,7 @@ summary: >+
   Workflow Manager 1.0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit is van toepassing op de volgende edities: Client, Standard
+  Dit is van toepassing op de volgende edities: Client, Standaard
 
 products:
 - vs
@@ -28,4 +28,4 @@ releases:
 - version: Original Release
   startDate: 10/18/2012
   endDate: 01/10/2023
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Onderhoudsgegevens van SharePoint 2016](/SharePoint/product-servicing-policy/updated-product-servicing-policy-for-sharepoint-server-2016)\n* [Onderhoudsgegevens van SharePoint 2013](/SharePoint/product-servicing-policy/updated-product-servicing-policy-for-sharepoint-2013)\n\n> [!NOTE]\n> Wanneer Werkstroombeheer een onderdeel is van SharePoint Server 2016 of SharePoint Server 2013, wordt deze ondersteund op basis van het einde van de ondersteuningsdatums van de betreffende SharePoint Server-versie.\n\n## <a name=\"editions\"></a>Edities \n* Client\n* Standard"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Onderhoudsgegevens van SharePoint 2016](/SharePoint/product-servicing-policy/updated-product-servicing-policy-for-sharepoint-server-2016)\n* [Onderhoudsgegevens van SharePoint 2013](/SharePoint/product-servicing-policy/updated-product-servicing-policy-for-sharepoint-2013)\n\n> [!NOTE]\n> Wanneer Workflow Manager een onderdeel is van SharePoint Server 2016 of SharePoint Server 2013, wordt deze ondersteund op basis van het einde van de ondersteuningsdatums van de betreffende SharePoint Server-versie.\n\n## <a name=\"editions\"></a>Edities \n* Client\n* Standaard"
