commit translated contents

--- a/lifecycle-data/products/fslogix.yml
+++ b/lifecycle-data/products/fslogix.yml
@@ -2,13 +2,14 @@
 metadata:
   title: FSLogix
   description: FSLogix volgt het moderne levenscyclusbeleid.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: 22f58db08e156a88911a67899e81a054683a0d34
-  ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
+  ms.date: 12/07/2020
+  keywords: 
+  ms.openlocfilehash: dfb32452fc063ade9afd59e990b13f3e93c3f76a
+  ms.sourcegitcommit: 272dedcf92e644b57865e78c716f937b66e534c3
   ms.translationtype: HT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/29/2020
-  ms.locfileid: "851824"
+  ms.lasthandoff: 12/08/2020
+  ms.locfileid: "1335805"
 name: FSLogix
 summary: >+
   FXLogix volgt het [moderne](/lifecycle/policies/modern) levenscyclusbeleid.
@@ -18,10 +19,8 @@ products:
 - windows
 policyType: modern-online
 supportDates:
-  start: 03/15/2016
-  end: 09/01/2019
+  start: 06/05/2020
 releases:
 - version: Original Release
-  startDate: 03/15/2016
-  endDate: 09/01/2019
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [FSLogix downloaden en installeren](/fslogix/install-ht)\n* [Ondersteuning voor FSLogix](https://social.msdn.microsoft.com/Forums/14ea5f6f-760b-4ad2-83cf-23c3cbc1bcc4/how-to-open-a-fslogix-support-request?forum=FSLogix)\n\n> [!NOTE]\n> Ondersteuning voor dit product is onderworpen aan de voorwaarden van zijn aanschaf."
+  startDate: 06/05/2020
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [FSLogix downloaden en installeren](/fslogix/install-ht)\n* [Een FSLogix-ondersteuningsaanvraag openen](https://social.msdn.microsoft.com/Forums/14ea5f6f-760b-4ad2-83cf-23c3cbc1bcc4/how-to-open-a-fslogix-support-request?forum=FSLogix)"
