--- a/lifecycle-data/products/visual-studio-2019.yml
+++ b/lifecycle-data/products/visual-studio-2019.yml
@@ -2,20 +2,20 @@
 metadata:
   title: Visual Studio 2019
   description: Visual Studio 2019 volgt het beleid voor de vaste levenscyclus.
-  ms.date: 09/01/2020
-  keywords: Agents,Build Tools,Community,Enterprise,ESGH,for Mac,IntelliTrace Standalone Collector,Performance Tools,Professional,PSGH,PSM,Remote Tools,Team Explorer,Visual C++ Redistributable
-  ms.openlocfilehash: 944f1805bb73b6937043cdb30b72b59732fe5e1c
-  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
+  ms.date: 12/08/2020
+  keywords: 
+  ms.openlocfilehash: b0c62a885196785982c3d308a9088d4baee93e7a
+  ms.sourcegitcommit: 3ab84f41d3282b710920b60cd302c8c52d9c6808
   ms.translationtype: HT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 09/01/2020
-  ms.locfileid: "937294"
+  ms.lasthandoff: 12/09/2020
+  ms.locfileid: "1338268"
 name: Visual Studio 2019
 summary: >+
   Visual Studio 2019 volgt het beleid voor de [vaste](/lifecycle/policies/fixed) levenscyclus.
 
 
-  Dit is van toepassing op de volgende edities: Agents, Opbouwhulpmiddelen, Community, Enterprise, ESGH, voor Mac, IntelliTrace Standalone Collector, Prestatiehulpprogramma's, Professional, PSGH, PSM, Werkbalk Extern, Team Explorer, Visual C++ herdistribueerbaar
+  Dit is van toepassing op de volgende edities: Agents, Opbouwhulpmiddelen, Community, Enterprise, voor Mac, IntelliTrace Standalone Collector, Prestatiehulpprogramma's, Professional, Werkbalk extern, Team Explorer, Visual C++ herdistribueerbaar
 
 products:
 - vs
@@ -25,10 +25,13 @@ supportDates:
   end: 04/09/2024
   extendedEnd: 04/10/2029
 releases:
+- version: Version 16.7
+  startDate: 08/05/2020
+  endDate: 04/10/2029
 - version: Version 16.4
   startDate: 12/03/2019
-  endDate: 04/10/2029
+  endDate: 10/12/2021
 - version: Version 16.0
   startDate: 04/02/2019
   endDate: 01/12/2021
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Aankondiging](https://devblogs.microsoft.com/visualstudio/tis-the-season-visual-studio-2019/)\n* [Onderhoudsinformatie](/visualstudio/releases/2019/servicing)\n\n\n## <a name=\"editions\"></a>Edities \n* Agents\n* Opbouwhulpmiddelen\n* Community\n* Enterprise\n* ESGH\n* Voor Mac\n* IntelliTrace Standalone Collector\n* Prestatiehulpprogramma's\n* Professional\n* PSGH\n* PSM\n* Werkbalk extern\n* Team Explorer\n* Visual C++ herdistribueerbaar"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Visual Studio blog-aankondigingen](https://devblogs.microsoft.com/visualstudio/)\n* [Onderhoudsinformatie](/visualstudio/productinfo/vs-servicing-vs)\n* [Visual Studio 2019-downloadpagina](https://my.visualstudio.com/Downloads?q=Visual%20Studio%202019)\n* [Visual Studio 2019-releaseopmerkingen](/visualstudio/releases/2019/release-notes)\n\n\n## <a name=\"editions\"></a>Edities \n* Agents\n* Opbouwhulpmiddelen\n* Community\n* Enterprise\n* Voor Mac\n* IntelliTrace Standalone Collector\n* Prestatiehulpprogramma's\n* Professional\n* Werkbalk extern\n* Team Explorer\n* Visual C++ herdistribueerbaar"
