--- a/lifecycle-data/products/dynamics-ax-2012.yml
+++ b/lifecycle-data/products/dynamics-ax-2012.yml
@@ -2,13 +2,14 @@
 metadata:
   title: Dynamics AX 2012
   description: Dynamics AX 2012 volgt het vaste levenscyclusbeleid.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: 7e6320ed9052812a7169c0fa134948cf24dc99b9
-  ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
+  ms.date: 12/17/2020
+  keywords: 
+  ms.openlocfilehash: 2583e321378d3cd2e9fb9ac8b8aed1fd6ff2c472
+  ms.sourcegitcommit: 4e42a9063f11353b16a25fce40ad96cc6146dd96
   ms.translationtype: HT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/29/2020
-  ms.locfileid: "851921"
+  ms.lasthandoff: 12/18/2020
+  ms.locfileid: "1348150"
 name: Dynamics AX 2012
 summary: >+
   Dynamics AX 2012 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
@@ -20,9 +21,9 @@ policyType: fixed
 supportDates:
   start: 09/25/2011
   end: 10/09/2018
-  extendedEnd: 10/12/2021
+  extendedEnd: 04/12/2022
 releases:
 - version: Original Release
   startDate: 09/25/2011
-  endDate: 10/12/2021
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](/dynamics365/unified-operations/dev-itpro/migration-upgrade/upgrade-overview-2012)\n* [Dynamics 365 Migratieprogramma](https://dynamics.microsoft.com/migration-program/)\n* [Extra levenscyclusgegevens](/dynamics365/fin-ops-core/dev-itpro/migration-upgrade/upgrade-overview-2012)\n\n> [!NOTE]\n> De basisondersteuning en uitgebreide ondersteuning zijn verlengd zoals weergegeven."
+  endDate: 04/12/2022
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](/dynamics365/unified-operations/dev-itpro/migration-upgrade/upgrade-overview-2012)\n* [Dynamics 365 Migratieprogramma](https://dynamics.microsoft.com/migration-program/)\n* [Extra levenscyclusgegevens](/dynamics365/fin-ops-core/dev-itpro/migration-upgrade/upgrade-overview-2012)\n\n> [!NOTE]\n> Het einde van de ondersteuning voor Dynamics AX 2012 en Dynamics AX R2 is verlengd van 12 oktober 2021 tot 12 april 2022."
