commit translated contents

--- a/lifecycle-data/products/windows-embedded-8.yml
+++ b/lifecycle-data/products/windows-embedded-8.yml
@@ -2,20 +2,20 @@
 metadata:
   title: Windows Embedded 8
   description: Windows Embedded 8 volgt het vaste levenscyclusbeleid.
-  ms.date: 09/10/2020
-  keywords: Pro,Standard
-  ms.openlocfilehash: 5da737e56a51de593764c142ccdb9a23878e9cac
-  ms.sourcegitcommit: c0c65f657b1da8e588fda5bedd3572fb2e3168bc
+  ms.date: 01/12/2021
+  keywords: 
+  ms.openlocfilehash: 3da619f1034077e82c4838db249eed2b63e4d8c6
+  ms.sourcegitcommit: 4887243a668c19ffd98b334e0486701f498f308f
   ms.translationtype: HT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 09/10/2020
-  ms.locfileid: "1002050"
+  ms.lasthandoff: 01/12/2021
+  ms.locfileid: "1376846"
 name: Windows Embedded 8
 summary: >+
   Windows Embedded 8 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: Pro, Standaard
+  Dit is van toepassing op de volgende edities: Pro
 
 products:
 - windows
@@ -28,4 +28,4 @@ releases:
 - version: Original Release
   startDate: 10/30/2012
   endDate: 01/12/2016
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Veelgestelde vragen over de levenscyclus - Windows-producten](/lifecycle/faq/windows)\n* [Windows Embedded 8.1](/lifecycle/products/windows-embedded-81-pro?branch=live)\n\n> [!NOTE]\n> Klanten moeten naar Windows Embedded 8.1 migreren om ondersteund te blijven.\n\n## <a name=\"editions\"></a>Edities \n* Pro\n* Standaard"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Windows Embedded 8.1](/lifecycle/products/windows-embedded-81-pro?branch=live)\n* [Veelgestelde vragen over de levenscyclus - Windows-producten](/lifecycle/faq/windows)\n\n> [!NOTE]\n> Klanten moeten naar Windows Emdedded 8.1 migreren om ondersteund te blijven.\n\n## <a name=\"editions\"></a>Edities \n* Pro"
