--- a/lifecycle-data/products/microsoft-azure-virtual-machine-classic.yml
+++ b/lifecycle-data/products/microsoft-azure-virtual-machine-classic.yml
@@ -1,17 +1,18 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Microsoft Azure Virtual Machine (klassiek) (bevestig met Azure voor publicatie - geen einddatum op datumoverzicht)
-  description: Microsoft Azure Virtual Machine (klassiek) (bevestig met Azure voor publicatie - geen einddatum op datumoverzicht) volgt het moderne levenscyclusbeleid.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: 62691a5a8045c8744b291cd5475ad7b6828542e8
-  ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
+  title: Microsoft Azure Virtual Machine (klassiek)
+  description: Microsoft Azure Virtual Machine (klassiek) volgt het moderne levenscyclusbeleid.
+  ms.date: 01/21/2021
+  keywords: 
+  ms.openlocfilehash: 0e575c15aa31b8d3147bfbca806bf0c90db48731
+  ms.sourcegitcommit: b565a66121b149da703e6b457e86868768499385
   ms.translationtype: HT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/29/2020
-  ms.locfileid: "851978"
-name: Microsoft Azure Virtual Machine (klassiek) (bevestig met Azure voor publicatie - geen einddatum op datumoverzicht)
+  ms.lasthandoff: 01/21/2021
+  ms.locfileid: "1416310"
+name: Microsoft Azure Virtual Machine (klassiek)
 summary: >+
-  Microsoft Azure Virtual Machine (klassiek) (bevestig met Azure voor publicatie - geen einddatum op datumoverzicht) volgt het [moderne](/lifecycle/policies/modern) levenscyclusbeleid.
+  Microsoft Azure Virtual Machine (klassiek) volgt het [moderne](/lifecycle/policies/modern) levenscyclusbeleid.
 
 
 products:
