--- a/lifecycle-data/products/windows-10-enterprise-and-education.yml
+++ b/lifecycle-data/products/windows-10-enterprise-and-education.yml
@@ -2,14 +2,14 @@
 metadata:
   title: Windows 10 Enterprise en Education
   description: Windows 10 Enterprise en Education volgen het moderne levenscyclusbeleid.
-  ms.date: 10/09/2020
+  ms.date: 02/12/2021
   keywords: 
-  ms.openlocfilehash: aafaec4e3b02f433224ea51446b8c18f4bd0c031
-  ms.sourcegitcommit: c1ccf8aedb73c5410ef70b9d59a49b6f6746a52c
+  ms.openlocfilehash: 84edf77fb54cb13cb21b8a8ef6643267a3872af2
+  ms.sourcegitcommit: b85a6ac35e0af0e17a9ae767927273508a4f31f6
   ms.translationtype: HT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 10/20/2020
-  ms.locfileid: "1162513"
+  ms.lasthandoff: 02/14/2021
+  ms.locfileid: "1449214"
 name: Windows 10 Enterprise en Education
 summary: >
   Windows 10 Enterprise en Education volgen het [moderne](/lifecycle/policies/modern) levenscyclusbeleid.
@@ -20,7 +20,9 @@ summary: >
 
   > [!IMPORTANT]
 
-  > Microsoft blijft ten minste één Windows 10 Semi-Annual-kanaal ondersteunen tot 14 oktober 2025.
+  > Microsoft blijft ten minste één versie van Windows 10 Semi-Annual-kanaal ondersteunen tot 14 oktober 2025.
+
+  De onderstaande tabel geeft de versies weer die tot op heden zijn uitgebracht.
 products:
 - windows
 policyType: modern-on-prem
@@ -61,4 +63,4 @@ releases:
 - version: Version 1507
   startDate: 07/29/2015
   endDate: 05/09/2017
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Windows als een service (WaaS)](/windows/deployment/update/waas-quick-start)\n* [Productgegevens](/windows/windows-10/)\n* [Veelgestelde vragen over de levenscyclus - Windows-producten](/lifecycle/faq/windows)\n\n> [!NOTE]\n> Tenzij uitgesteld, kunnen verdere functie-updates van Windows 10 Semi-Annual-kanaal geïnstalleerd worden vóór de vermelde einddatum van de basisondersteuning.\n\n## <a name=\"editions\"></a>Edities \n* Education\n* Enterprise"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Windows als een service (WaaS)](/windows/deployment/update/waas-quick-start)\n* [Windows 10 IoT Enterprise](/lifecycle/products/windows-10-iot-enterprise)\n* [Windows 10 Home en Pro](/lifecycle/products/windows-10-home-and-pro)\n* [Productgegevens](/windows/windows-10/)\n* [Veelgestelde vragen over de levenscyclus - Windows-producten](/lifecycle/faq/windows)\n\n> [!NOTE]\n> Tenzij uitgesteld, kunnen verdere functie-updates van Windows 10 Semi-Annual-kanaal geïnstalleerd worden vóór de vermelde einddatum van de basisondersteuning.\n\n## <a name=\"editions\"></a>Edities \n* Education\n* Enterprise"
